--- a/doc/node.1
+++ b/doc/node.1
@@ -127,6 +127,9 @@ feature.
 .It Fl -experimental-vm-modules
 Enable experimental ES module support in VM module.
 .
+.It Fl -experimental-wasi
+Enable experimental WebAssembly System Interface support.
+.
 .It Fl -experimental-wasm-modules
 Enable experimental WebAssembly module support.
 .
